# account-quota-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.en.md  README.md  config.example.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: ACCOUNT_USAGE_MONITORING.md  cli-proxy-codex-collector_CN.md  project-overview_CN.md
docs/plans/: quota-forecast_CN.md
scripts/: dev.py
src/cpa_monitor/: __main__.py
src/cpa_monitor/application/: config.py  ports.py  schedule.py  service.py
src/cpa_monitor/domain/: __init__.py  alerts.py  models.py  summary.py
src/cpa_monitor/infrastructure/: __init__.py  jsonpath.py
src/cpa_monitor/infrastructure/http/: __init__.py  cli_proxy_codex.py  collector.py  routing.py  sub2_codex.py
src/cpa_monitor/infrastructure/notify/: composite.py  console.py  onebot.py  qqbot.py
src/cpa_monitor/infrastructure/reporting/: html.py
src/cpa_monitor/infrastructure/storage/: sqlite.py
src/cpa_monitor/interfaces/: bootstrap.py  cli.py
tests/: test_alerts.py  test_cli_proxy_codex.py  test_collector.py  test_jsonpath.py  test_notifier_bootstrap.py  test_onebot_notifier.py  test_qqbot_notifier.py  test_reporting.py  test_scheduler.py  test_service.py  test_storage.py  test_sub2_codex.py  test_summary.py
